--- a/views/labs/preguntas.ejs
+++ b/views/labs/preguntas.ejs
@@ -1,5 +1,6 @@
 
 <%- include('../includes/labs.head.ejs') %>
+<input type="hidden" name="_csrf" value="<%= csrfToken %>" >
 <body>
     <section class="section has-background-black-bis has-text-grey-light">
         <div class="container">
