--- a/views/labs/tienda.ejs
+++ b/views/labs/tienda.ejs
@@ -1,4 +1,5 @@
 <%- include('../includes/labs.head.ejs') %>
+<input type="hidden" name="_csrf" value="<%= csrfToken %>" >
 <body class="dark-background">
     <div class="container is-fullhd">
         <p class="title is-5-desktop">Tienda</p>
