--- a/views/users/users.views.ejs
+++ b/views/users/users.views.ejs
@@ -1,7 +1,9 @@
 <%- include('../includes/labs.head.ejs') %>
 <div class="section has-background-grey-dark">
 <h1 class="title is-4">Bienvenido</h1>
+
 <form action="/users/login" method="POST">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
     <label for="username">Nombre de usuario:</label>
     <input id="username" name="username" class="input is-light" type="text" placeholder="Usuario">
     <br><br>
